# offboard_ws

./: .gitignore  1_run_px4.sh  2_run_agent.sh  3_run_offboard.sh  README.md  TAG_RULE.md  run_gz_gui.sh  run_simulation.sh
src/offboard_example/: CMakeLists.txt  package.xml
src/offboard_example/src/: offboard_control.cpp
